Fixed off-by-2 error in unix_name in file_name.c
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@239 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+mtools (4.0.2) stable; urgency=low
+
+  * Fixed off-by-2 error in unix_name in file_name.c
+
+ -- Alain Knaff <alain@knaff.lu>  Mon, 26 Jan 2009 22:58:06 +0100
 mtools (4.0.1) stable; urgency=low
 
   * Missing functions on Solaris 
