Added GNU copyright everywhere
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@242 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/README
+++ b/README
@@ -16,7 +16,7 @@ info viewer.
  Man pages are still present, but contain less information, and are
 less uptodate than the texinfo documentation.
  If you do not have the necessary tools to view the texinfo doc, you
-may also find it on the Workd Wide Web at the following locations:
+may also find it on the World Wide Web at the following locations:
   http://mtools.linux.lu/mtools_toc.html
   http://www.tux.org/pub/knaff/mtools/mtools_toc.html
 
