--- a/README
+++ b/README
@@ -47,3 +47,9 @@ Current Status
 --------------
 
 Stable release 3.3.
+
+Copying
+-------
+Copying and distribution of this file, with or without modification,
+are permitted in any medium without royalty provided the copyright
+notice and this notice are preserved.
