--- a/mtools.texi
+++ b/mtools.texi
@@ -11,21 +11,17 @@
 @copying
 This manual is for Mtools (version @value{VERSION}, @value{UPDATED}),
 which is a collection of tools to allow Unix systems to manipulate
-MS-DOS files
+MS-DOS files.
 
-Copyright @copyright{} 2007 Free Software Foundation, Inc.
+Copyright @copyright{} 2007, 2009 Free Software Foundation, Inc.
 
 @quotation
 Permission is granted to copy, distribute and/or modify this document
-under the terms of the GNU Free Documentation License, Version 1.2 or
+under the terms of the GNU Free Documentation License, Version 1.3 or
 any later version published by the Free Software Foundation; with no
-Invariant Sections, with the Front-Cover Texts being ``A GNU Manual,''
-and with the Back-Cover Texts as in (a) below.  A copy of the
-license is included in the section entitled ``GNU Free Documentation
-License.''
-
-(a) The FSF's Back-Cover Text is: ``You have the freedom to
-copy and modify this GNU manual.''
+Invariant Sections, with no Front-Cover Texts, and with no Back-Cover
+Texts.  A copy of the license is included in the section entitled
+``GNU Free Documentation License''.
 @end quotation
 @end copying
 
@@ -34,19 +30,14 @@ copy and modify this GNU manual.''
 mtools - utilities to access DOS disks in Unix.
 @end ignore
 
-
-
 @iftex
 @finalout
 @end iftex
 
-@ifnottex
-@format
-START-INFO-DIR-ENTRY
+@dircategory DOS
+@direntry
 * Mtools: (mtools).        Mtools: utilities to access DOS disks in Unix.
-END-INFO-DIR-ENTRY
-@end format
-@end ifnottex
+@end direntry
 
 
 @titlepage
@@ -65,7 +56,7 @@ END-INFO-DIR-ENTRY
 @node Top, Location, (dir), (dir)
 @top Mtools doc
 
-This is mtools' documentation
+This is mtools' documentation.
 @end ifnottex
 
 @comment MANstart 1
@@ -85,6 +76,7 @@ without any preliminary mounting or initialization (assuming the default
 @file{/etc/mtools.conf} works on your machine).  With mtools, one can
 change floppies too without unmounting and mounting.
 
+@insertcopying
 
 @menu
 * Location::          Where to find mtools and early bug fixes
