Renamed Changelog to NEWS in order to be more GNU compatible
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@269 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+v4_0_5
+	Make setpgrp() usage in floppyd conditional
+	Re-instate PACKED around structure (ARM)
+	LSEEK64
+	
 v4_0_4
 	BSD support: SCSI, use getuserid/getgroupid in floppyd
 	Another attempt at putwc fix for OS/2
