--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+v4_0_6
+	Fallback for missing wchar_t iconv codepage on OS/2
+	Fixes for LSEEK64 support
+	Support for --help that returns a 0 exit status
 v4_0_5
 	Make setpgrp() usage in floppyd conditional
 	Re-instate PACKED around structure (ARM)
