--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+v4_0_7
+	Fixed conversion to native on OS/2
+	Fix parsing of --help flag
 v4_0_6
 	Fallback for missing wchar_t iconv codepage on OS/2
 	Fixes for LSEEK64 support
