--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+v4_0_8
+	Corrected copyright attributions in the various files
 v4_0_7
 	Fixed conversion to native on OS/2
 	Fix parsing of --help flag
