--- a/README
+++ b/README
@@ -1,15 +1,3 @@
-% Copyright 1996-1998,2001,2002,2009 Alain Knaff.
-
-% This documentation is for Mtools which is a collection of tools to
-% allow Unix systems to manipulate MS-DOS files.
-
-% Permission is granted to copy, distribute and/or modify this document
-% under the terms of the GNU Free Documentation License, Version 1.3 or
-% any later version published by the Free Software Foundation; with no
-% Invariant Sections, with no Front-Cover Texts, and with no Back-Cover
-% Texts.  A copy of the license is included in the section entitled
-% ``GNU Free Documentation License''.
-
 Compilation
 -----------
 
@@ -39,12 +27,11 @@ Compiler
 Authors
 -------
 
-Original code (versions through 2.0.7?) by Emmet P. Gray (Texas, USA), who
-no longer appears to be reachable by Internet e-mail.  Viktor Dukhovni (at
-Princeton, USA) had major input into v2.0.
+Original code (versions through 2.0.7?) by Emmet P. Gray (Texas, USA).
+Viktor Dukhovni (at Princeton, USA) had major input into v2.0.
 
-Since 2.0.7: maintained primarily and until now informally by Alain
-Knaff (Luxembourg) and David Niemi (Reston, Virginia, USA).
+Since 2.0.7: maintained primarily and until now by Alain Knaff
+(Luxembourg) and David Niemi (Reston, Virginia, USA).
 
 Please report bugs to the mtools mailing list at mtools@www.tux.org.
 Before reporting any problems, check whether they have already been
@@ -58,10 +45,29 @@ containing 'subscribe mtools' in its body to majordomo@www.tux.org
 Current Status
 --------------
 
-Stable release 3.3.
+Stable release 4.0.x
 
 Copying
 -------
-Copying and distribution of this file, with or without modification,
-are permitted in any medium without royalty provided the copyright
-notice and this notice are preserved.
+Mtools is published under GPL v3.0 (code) and GNU Free Documentation
+License.
+Most files of mtools bears a notice describing the copyright, and
+whether it is covered by GPL or GFDL
+
+GPL:
+
+debian/control		Copyright 2007 Alain Knaff
+
+debian/changelog	Copyright 2007-2009 Alain Knaff
+
+NEWS			Copyright 1995 David C. Niemi
+			Copyright 1995-2009 Alain Knaff
+
+mtools.spec		Copyright 2003-2005,2007-2009 Alain Knaff
+
+
+GFDL:
+
+README			Copyright 1996-1998,2001,2002,2009 Alain Knaff.
+Release.notes		Copyright 1995 Alain Knaff
+
