--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,8 @@
+mtools (4.0.9) stable; urgency=low
+
+  * More copyright stuff
+
+ -- Alain Knaff <alain@knaff.lu>  Mon,  2 Mar 2009 22:15:54 +0100
 mtools (4.0.8) stable; urgency=low
 
   * Copyright notices
