--- a/README
+++ b/README
@@ -41,6 +41,9 @@ http://www.tux.org/pub/knaff
 You may subscribe to the mtools mailing list by sending a message
 containing 'subscribe mtools' in its body to majordomo@www.tux.org
 
+Since March 3rd 2009, mtools is now officially a GNU package. Special
+thanks to Emmet P. Gray, the original developer of the program, who
+supported dubbing mtools a GNU package.
 
 Current Status
 --------------
