Added note that mtools is a GNU program
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@306 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/README
+++ b/README
@@ -52,8 +52,9 @@ Stable release 4.0.x
 
 Copying
 -------
-Mtools is published under GPL v3.0 (code) and GNU Free Documentation
-License.
+Mtools is a GNU program published under GPL v3.0 (code) and GNU Free
+Documentation License.
+
 Most files of mtools bears a notice describing the copyright, and
 whether it is covered by GPL or GFDL
 
