--- a/man-warning-end.texi
+++ b/man-warning-end.texi
@@ -30,10 +30,8 @@ To generate a html copy,  run:
 @example
     ./configure; make html
 @end example
-A premade html can be found at:
-@file{http://mtools.linux.lu}
-and also at:
-@file{http://www.tux.org/pub/knaff/mtools}
+A premade html can be found at
+@file{http://www.gnu.org/software/mtools/manual/mtools.html}
 
 @item
 To generate an info copy (browsable using emacs' info mode), run:
