Fixed version number
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@335 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-mtools (20090829) stable; urgency=low
+mtools (4.0.11) stable; urgency=low
 
   * Fixed compiler in mlabel.c and elsewhere
   * Fixed h flag in mattrib.c
