--- a/mtools.texi
+++ b/mtools.texi
@@ -1724,7 +1724,7 @@ The @code{mformat} command is used to add an MS-DOS file system to a
 low-level formatted diskette. Its syntax is:
 
 @display
-@code{mformat} [@code{-t} @var{cylinders}] [@code{-h} @var{heads}] [@code{-s} @var{sectors}]
+@code{mformat} [@code{-t} @var{cylinders}|@code{-T} @var{tot_sectors}] [@code{-h} @var{heads}] [@code{-s} @var{sectors}]
   [@code{-f} @var{size}] [@code{-1}] [@code{-4}] [@code{-8}]
   [@code{-v} @var{volume_label}]
   [@code{-F}] [@code{-S} @var{sizecode}] [@code{-X}]
@@ -1783,9 +1783,12 @@ the -h/-t/-s flags. The following sizes are supported:
 
 @item t
 Specifies the number of tracks on the disk.
+@item T
+Specifies the number of total sectors on the disk. Only one of these 2
+options may be specified (tracks or total sectors)
 @item h
 The number of heads (sides).
-@item n
+@item s
 Specifies the number of sectors per track. If the 2m option is given,
 number of 512-byte sector equivalents on generic tracks (i.e. not head 0
 track 0).  If the 2m option is not given, number of physical sectors per
