--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+v4_0_17
+	mbadblocks now takes a list of bad blocks (either as sectors
+	or as clusters)
+	mbadblocks now is able to do write scanning for bad blocks
+	mshowfat can show cluster of specific offset
+	Enable mtools to deal with very small sector sizes...
+	Fixed encoding of all-lowercase names (no need to mangle
+	these)
+	Consider every directory entry after an ENDMARK (0x00) to be deleted
+	After writing a new entry at end of a directory, be sure to also add
+	an ENDMARK (0x00)
+	Deal with possibility of a NULL pointer being returned by
+	localtime during timestamp conversion
 v4_0_16
 	configure.in fixes
 	fixed formatting of fat_size_calculation.tex document
