Fixed typo in minfo's section (was called mlabel...)
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@426 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/mtools.texi
+++ b/mtools.texi
@@ -2010,7 +2010,7 @@ with MS-DOS 1.0 file systems
 @code{minfo} @var{drive}:
 @end display
 
-Mlabel supports the following option:
+Minfo supports the following option:
 @table @code
 @item v
 Prints a hexdump of the boot sector, in addition to the other information
