--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 v4_0_18	
+	Fixed compilation on Mingw
+	Fixed doc (especially mformat)
 	Fix mformat'ing of FAT12 filesystems with huge cluster sizes
 	Minfo prints image file name in mformat command line if an image
 	file name was given
@@ -16,6 +18,7 @@ v4_0_17
 	Consider every directory entry after an ENDMARK (0x00) to be deleted
 	After writing a new entry at end of a directory, be sure to also add
 	an ENDMARK (0x00)
+
 	Deal with possibility of a NULL pointer being returned by
 	localtime during timestamp conversion
 v4_0_16
