Fix mt_size_t on NetBSD
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@433 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,5 @@
 v4_0_18	
+	Fix mt_size_t on NetBSD
 	Fixed compilation on Mingw
 	Fixed doc (especially mformat)
 	Fix mformat'ing of FAT12 filesystems with huge cluster sizes
