--- a/mtools.1
+++ b/mtools.1
@@ -1,5 +1,5 @@
 '\" t
-.TH mtools 1 "09Jan13" mtools-4.0.18
+.TH mtools 1 "29Sep18" mtools-4.0.19
 .SH Name
 mtools - utilities to access DOS disks in Unix.
 '\" t
@@ -26,7 +26,7 @@ to another.
 Mtools is sufficient to give access to MS-DOS file systems.  For
 instance, commands such as \fR\&\f(CWmdir a:\fR work on the \fR\&\f(CWa:\fR floppy
 without any preliminary mounting or initialization (assuming the default
-\&\fR\&\f(CW\(if/etc/mtools.conf\(is\fR works on your machine).  With mtools, one can
+\&\fR\&\f(CW\(if/usr/local/etc/mtools.conf\(is\fR works on your machine).  With mtools, one can
 change floppies too without unmounting and mounting.
 .PP
 .SH Where\ to\ get\ mtools
@@ -36,10 +36,10 @@ Mtools can be found at the following places (and their mirrors):
 .nf
 .ft 3
 .in +0.3i
-http://ftp.gnu.org/gnu/mtools/mtools-4.0.18.tar.gz
-http://mtools.linux.lu/mtools-4.0.18.tar.gz
-ftp://www.tux.org/pub/knaff/mtools/mtools-4.0.18.tar.gz
-ftp://ibiblio.unc.edu/pub/Linux/utils/disk-management/mtools-4.0.18.tar.gz
+http://ftp.gnu.org/gnu/mtools/mtools-4.0.19.tar.gz
+http://mtools.linux.lu/mtools-4.0.19.tar.gz
+ftp://www.tux.org/pub/knaff/mtools/mtools-4.0.19.tar.gz
+ftp://ibiblio.unc.edu/pub/Linux/utils/disk-management/mtools-4.0.19.tar.gz
 .fi
 .in -0.3i
 .ft R
