--- a/floppyd.1
+++ b/floppyd.1
@@ -1,5 +1,5 @@
 '\" t
-.TH floppyd 1 "29Sep18" mtools-4.0.19
+.TH floppyd 1 "04Nov18" mtools-4.0.19
 .SH Name
 floppyd - floppy daemon for remote access to floppy drive
 '\" t
