--- a/floppyd_installtest.1
+++ b/floppyd_installtest.1
@@ -1,5 +1,5 @@
 '\" t
-.TH floppyd_installtest 1 "29Sep18" mtools-4.0.19
+.TH floppyd_installtest 1 "04Nov18" mtools-4.0.19
 .SH Name
 floppyd_installtest - tests whether floppyd is installed and running
 '\" t
