--- a/mattrib.1
+++ b/mattrib.1
@@ -1,5 +1,5 @@
 '\" t
-.TH mattrib 1 "29Sep18" mtools-4.0.19
+.TH mattrib 1 "04Nov18" mtools-4.0.19
 .SH Name
 mattrib - change MSDOS file attribute flags
 '\" t
