--- a/mcopy.1
+++ b/mcopy.1
@@ -1,5 +1,5 @@
 '\" t
-.TH mcopy 1 "29Sep18" mtools-4.0.19
+.TH mcopy 1 "04Nov18" mtools-4.0.19
 .SH Name
 mcopy - copy MSDOS files to/from Unix
 '\" t
