--- a/mdeltree.1
+++ b/mdeltree.1
@@ -1,5 +1,5 @@
 '\" t
-.TH mdeltree 1 "29Sep18" mtools-4.0.19
+.TH mdeltree 1 "04Nov18" mtools-4.0.19
 .SH Name
 mdeltree - recursively delete an MSDOS directory and its contents
 '\" t
