--- a/mdu.1
+++ b/mdu.1
@@ -1,5 +1,5 @@
 '\" t
-.TH mdu 1 "29Sep18" mtools-4.0.19
+.TH mdu 1 "04Nov18" mtools-4.0.19
 .SH Name
 mdu - display the amount of space occupied by an MSDOS directory
 '\" t
