--- a/mformat.1
+++ b/mformat.1
@@ -1,5 +1,5 @@
 '\" t
-.TH mformat 1 "29Sep18" mtools-4.0.19
+.TH mformat 1 "04Nov18" mtools-4.0.19
 .SH Name
 mformat - add an MSDOS filesystem to a low-level formatted floppy disk
 '\" t
