--- a/minfo.1
+++ b/minfo.1
@@ -1,5 +1,5 @@
 '\" t
-.TH minfo 1 "29Sep18" mtools-4.0.19
+.TH minfo 1 "04Nov18" mtools-4.0.19
 .SH Name
 minfo - print the parameters of a MSDOS filesystem
 '\" t
