--- a/mren.1
+++ b/mren.1
@@ -1,5 +1,5 @@
 '\" t
-.TH mren 1 "29Sep18" mtools-4.0.19
+.TH mren 1 "04Nov18" mtools-4.0.19
 .SH Name
 mren - rename an existing MSDOS file
 '\" t
