--- a/mtools.tmpl.1
+++ b/mtools.tmpl.1
@@ -1,5 +1,5 @@
 '\" t
-.TH mtools 1 "29Sep18" mtools-4.0.19
+.TH mtools 1 "04Nov18" mtools-4.0.19
 .SH Name
 mtools - utilities to access DOS disks in Unix.
 '\" t
