--- a/mtoolstest.1
+++ b/mtoolstest.1
@@ -1,5 +1,5 @@
 '\" t
-.TH mtoolstest 1 "29Sep18" mtools-4.0.19
+.TH mtoolstest 1 "04Nov18" mtools-4.0.19
 .SH Name
 mtoolstest - tests and displays the configuration
 '\" t
