--- a/mtype.1
+++ b/mtype.1
@@ -1,5 +1,5 @@
 '\" t
-.TH mtype 1 "29Sep18" mtools-4.0.19
+.TH mtype 1 "04Nov18" mtools-4.0.19
 .SH Name
 mtype - display contents of an MSDOS file
 '\" t
