--- a/mzip.1
+++ b/mzip.1
@@ -1,5 +1,5 @@
 '\" t
-.TH mzip 1 "29Sep18" mtools-4.0.19
+.TH mzip 1 "04Nov18" mtools-4.0.19
 .SH Name
 mzip - change protection mode and eject disk on Zip/Jaz drive
 '\" t
