--- a/mtools.texi
+++ b/mtools.texi
@@ -1763,6 +1763,7 @@ low-level formatted diskette. Its syntax is:
   [@code{-B} @var{boot_sector}] [@code{-k}]
   [@code{-m} @var{media_descriptor}]
   [@code{-K} @var{backup_boot}]
+  [@code{-R} @var{nb_reserved_sectors}]
   [@code{-c} @var{clusters_per_sector}]
   [@code{-d} @var{fat_copies}]
   [@code{-X}] [@code{-2} @var{sectors_on_track_0}] [@code{-3}]
@@ -1913,6 +1914,11 @@ disks parameters.
 @item K
 Sets the sector number where the backup of the boot sector should be
 stored (only relevant on FAT32).
+@item R
+Sets the number of reserved sectors for this filesystem. This must be
+at least 1 for non-FAT32 disks, and at least 3 for FAT disks (in order
+to accomodate the boot sector, the info sector and the backup boot
+sector).
 
 @item m
 Use a non-standard media descriptor byte for this disk. The media
