Explicitly pass available target buffer size for character set conversions
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@496 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,5 @@
+	- Explicitly pass available target buffer size for character
+	set conversions
 v4_0_22
 	- Fixed -f flag for mformat (size is KBytes, rather than sectors)
 	- Fixed toupper/tolower usage (unsigned char rather than plain signed)
