--- a/debian/changelog
+++ b/debian/changelog
@@ -80,7 +80,7 @@ mtools (4.0.16) stable; urgency=low
 mtools (4.0.15) stable; urgency=low
 
   * Added missing -i option to mshortname
-  * Splitted .deb package into mtools and floppyd in order to
+  * Split .deb package into mtools and floppyd in order to
     match Ubuntu
 
  -- Alain Knaff <alain@knaff.lu>  Sun, 17 Oct 2010 19:42:46 +0200
