--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+v4_0_23
+	- Address lots of compiler warnings (assignments between different types)
+	- Network speedup fixes for floppyd (TCP_CORK)
+	- Typo fixes
 	- Explicitly pass available target buffer size for character
 	set conversions
 v4_0_22
