--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+mtools (4.0.23) stable; urgency=low
+  * Address lots of compiler warnings (assignments between different types)
+  * Network speedup fixes for floppyd (TCP_CORK)
+  * Typo fixes
+  * Explicitly pass available target buffer size for character set conversions
+
+ -- Alain Knaff <alain@knaff.lu>  Sun,  9 Dec 2018 23:26:50 +0100
 mtools (4.0.22) stable; urgency=low
   * Fixed -f flag for mformat (size is KBytes, rather than sectors)
   * Fixed toupper/tolower usage (unsigned char rather than plain signed)
