--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
 v4_0_33
-	- Fix support for partitions (broken in
+	- Fix support for partitions (broken in 4.0.30)
 	- Portability fixes for Solaris 10 and 11
-	- General simplifaction of configure script, and largefile handling
+	- General simplification of configure script, and largefile handling
 	- Tested and fixed for platforms *without* largefile support
 	- In cases where lseek works with 32-bit offsets, prefer
           lseek64 over llseek
