Changelog for preparing 4.0.36
git-svn-id: svn://svn.savannah.gnu.org/mtools/trunk@699 8fbfe7c3-7cdf-472d-ae67-d119146b2a64

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+v4_0_36
+	- Fix error status of recursive listing of empty root directory
+	- If recursive listing, also show matched files at level one
+	- Use "seekless" reads & write internally, where possible
+	- Text mode conversion refactoring
+
 v4_0_35
 	- Fix cluster padding at end of file in batch mode, and add
 	  comments about what happens here
