--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+mtools (4.0.36) stable; urgency=low
+
+  * Fix error status of recursive listing of empty root directory
+  * If recursive listing, also show matched files at level one
+  * Use "seekless" reads & write internally, where possible
+  * Text mode conversion refactoring
+  * Misc refactoring
+
+ -- Alain Knaff <alain@knaff.lu>  Sun, 21 Nov 2021 16:41:10 +0100
 mtools (4.0.35) stable; urgency=low
 
   * Fix cluster padding at end of file in batch mode, and add comments
