--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 v4_0_37
 	- Removed mclasserase commands, which doesn't fit the coding
           structure of the rest of mtools
+	- Add support to -i option to mcd
+	- Document -i in mtools.1
+	- Fix a missing commad error in floppyd_io.c
 
 v4_0_36
 	- Fix error status of recursive listing of empty root directory
